apply plugin: 'com.android.library'

repositories {
    mavenCentral()
    mavenLocal()
    google()
}

dependencies {
    implementation fileTree(dir: 'libs', include: '*.jar')
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'com.google.firebase:firebase-core:21.1.1'
    implementation 'com.google.firebase:firebase-analytics:22.4.0'
    implementation 'com.google.firebase:firebase-crashlytics:19.4.2'

    implementation "androidx.work:work-runtime:2.10.0"
    implementation "androidx.work:work-multiprocess:2.10.0"
}

android {
    buildFeatures {
        buildConfig true
        resValues true
    }
    compileSdkVersion rootProject.ext.compileSdkVersion
    namespace 'org.nick.wwwjdic'

    useLibrary 'org.apache.http.legacy'

    defaultConfig {
        minSdkVersion rootProject.ext.minSdkVersion
        targetSdkVersion rootProject.ext.targetSdkVersion
    }

    sourceSets {
        debug.setRoot('build-types/debug')
        release.setRoot('build-types/release')

        main {
            manifest.srcFile 'AndroidManifest.xml'
            java.srcDirs = ['src']
            resources.srcDirs = ['src']
            aidl.srcDirs = ['src']
            renderscript.srcDirs = ['src']
            res.srcDirs = ['res']
            assets.srcDirs = ['assets']
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    //kotlinOptions {
    //    jvmTarget = '11'
    //}
    buildFeatures {
        renderScript true
        aidl true
    }
}
